--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@remix-run/node": "^1.6.5",
     "@remix-run/react": "^1.6.5",
     "@remix-run/serve": "^1.6.5",
+    "@stitches/react": "^1.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
